crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__assignment_without_left.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo() { = value }

formatted:
fun demo() {
  =value
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(13), end: TextSize(14) }) message=expected expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(15), end: TextSize(20) }) message=unexpected token in expression
