crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__block_empty_statement_adjacent_braces.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(){;}

formatted:
fun demo() {
  ;
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(11), end: TextSize(12) }) message=expected expression
