crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__block_with_formatter_ignore.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo() {
  val before = 1
  // @formatter:off
  val raw=1+2
  // @formatter:on
  /* block */ val after = value
}

formatted:
fun demo() {
  val before = 1
  // @formatter:off
  val raw=1+2
  // @formatter:on
  /* block */
  val after = value
}

diagnostics:
(none)
