crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__body_boundary_comments.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun adjacentControlFlowWithoutTerminator() {
  for (i in 1..2) { consume(i) } while (ready()) { consume(next()) } /* recovery boundary */
}

formatted:
fun adjacentControlFlowWithoutTerminator() {
  for (i in 1..2) { consume(i) } while (ready()) { consume(next()) } /* recovery boundary */
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(78), end: TextSize(83) }) message=unexpected token in expression
