crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__braced_opening_comments.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class BracedOpeningComments { /* JOLT-TRIVIA:class-open */
    fun block() { /* JOLT-TRIVIA:block-open */
        println("body")
    }
}

formatted:
class BracedOpeningComments { /* JOLT-TRIVIA:class-open */
  fun block() {
    /* JOLT-TRIVIA:block-open */
    println("body")
  }
}

diagnostics:
(none)
