crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__class_body.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
class Demo { fun ok() {}
/* orphan */ +
val value = 1 }

formatted:
class Demo {
  fun ok() {}

  /* orphan */
  +
val value = 1
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(40), end: TextSize(43) }) message=expected expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(44), end: TextSize(49) }) message=unexpected token in expression
